# CrabLauncher

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
api/src/meta/: client.rs  manifest.rs  mod.rs  utils.rs
core/: Cargo.toml
core/src/: client.rs  config.rs  env.rs  java.rs  lib.rs  manifest.rs  profiles.rs  version_manifest.rs
core/src/client/: download.rs  mod.rs  rule.rs
core/src/utils/: download.rs  errors.rs  mod.rs
src/: cli.rs  config.rs  env.rs  error.rs  java.rs  main.rs  manifest.rs  profiles.rs  utils.rs
src/client/: download.rs  mod.rs  rule.rs
src/json/: client.rs
src/utils/: download.rs  errors.rs  mod.rs  zip.rs
