[package]
name = "crab-launcher-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

zip = "2.1.3"
rust_search = "2.0.0"
regex = "1.10.5"
lazy_static = "1.5.0"
velcro = "0.5.4"
crab-launcher-api = { path = "../api" }
semver = "1.0.25"
bytes = "1.10.1"
futures = "0.3.31"
